--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,18 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :role %><br />
+    <%= f.radio_button :role, 'user', checked: true %> User
+    <%= f.radio_button :role, 'admin'%> Admin
+  </div>
+
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
