--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,17 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :role %><br />
+    <%= f.radio_button :role, 'user', checked: true %> User
+    <%= f.radio_button :role, 'admin'%> Admin
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
