--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,6 +1,6 @@
 <h2> Add a new food </h2>
 
-<%= form_for @food do |f| %>
+<%= form_for @food, data: {turbo: false} do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
@@ -8,10 +8,10 @@
   <%= f.text_field :measurement_unit %>
 
   <%= f.label :price %>
-  <%= f.text_field :price %>
+  <%= f.number_field :price %>
 
   <%= f.label :quantity %>
-  <%= f.text_field :quantity %>
+  <%= f.number_field :quantity %>
 
   <%= f.submit "Add food" %>
 <% end %>
