--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -22,6 +22,13 @@
 </div>
 
 <div class="field">
+    <%= f.label :public, "Do you want public?" %>
+    <%= f.check_box :public %>
+</div>
+
+
+
+<div class="field">
     <%= f.submit  "Add Recipe" %>
 </div>
 <% end %>
