--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,7 +6,7 @@
   <% @recipes.each do |recipe| %>
     <div class="single-recipe">
       <div class="name-remove">
-        <p class="recipe-name"><%= recipe.name %></p>
+        <%= link_to recipe.name, recipe_path(recipe)%>
         <%= button_to 'Remove', recipe_path(recipe), method: :delete %>
       </div>
       <div class="description">
