--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,7 +35,7 @@ input {
   border-radius: 4px;
 }
 
-form {
+.devise_form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,17 +70,15 @@ td {
 }
 
 a {
-  color: #333;
   text-decoration: none;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin: 10px;
 }
 
 .button {
   background-color: hsl(204, 86%, 53%);
+  margin: 10px;
+
   border: 1px solid transparent;
+  border-radius: 4px;
   color: #fff;
   cursor: pointer;
   justify-content: center;
