--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -240,3 +240,50 @@ a {
   padding: 10px;
   border-radius: 10px;
 }
+
+.name-header {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+
+.name-header h1 {
+  font-size: 2.5rem;
+}
+
+.times {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.5rem;
+}
+
+.recipe-details {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.detail-and-toogle {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.toogle-button {
+   display: flex;
+  align-items: center;
+  gap: 10px; 
+}
+
+.btnToggle {
+  color: rgb(91, 145, 10);
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.underline {
+  border-bottom: 1px solid black;
+  margin: 3rem;
+}
