--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@recipe, @recipe_food], url: recipe_foods_path(@recipe)) do |f| %>
+<%= form_for [@recipe, @recipe_food], data: { turbo: false } do |f| %>
   <div class="field">
     <%= f.label :quantity %>
     <%= f.number_field :quantity %>
