--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,7 +76,6 @@ a {
 .button {
   background-color: hsl(204, 86%, 53%);
   margin: 10px;
-
   border: 1px solid transparent;
   border-radius: 4px;
   color: #fff;
@@ -192,7 +191,7 @@ a {
   padding: 20px 40px;
   width: 80%;
   margin: 30px auto;
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
 
