--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,7 +21,13 @@
         </div>
     </div>
     <div class="underline"></div>
- <% if @recipe.user == current_user || @recipe.public%>
+    <% if @recipe.user == current_user %>
+    <div class="add-ingredient">
+        <%= link_to 'Add ingredient', new_recipe_recipe_food_path(@recipe), class: 'button' %>
+        <%= link_to 'Generate shopping lists', shopping_lists_path, class: 'button'%>
+    </div>
+    <%end%>
+     <% if @recipe.user == current_user || @recipe.public%>
     <table>
       <thead>
         <tr>
@@ -50,5 +56,3 @@
     <%end%>
   </div>
 </main>
-
-   
