--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -14,7 +14,7 @@
   </thead>
   <tbody>
     <% @foods.each do |food| %>
-      <tr>
+      <tr class='row-food'>
         <td><%= food.name %></td>
         <td><%= food.measurement_unit %></td>
         <td><%= food.price %></td>
