--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,6 @@
 <main>
   <div class="all-recipe">
+  <h2 class="title">All Recipes</h2>
   <div class="create-recipe">
    <%= link_to 'create new', new_recipe_path, class: "create-recipe-button" %>
   </div>
